--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <a href="index.html">Home Page</a>
 <a href="profile.html">Profile Page</a>
 
-<h1>Welcome to Ngunnawal Country</h1>
-
 <div class="grid-container"> <!--Overall layout-->
+    <div class="full-width">
+        <h1>Welcome to Ngunnawal Country</h1>
+    </div>
     <div> <!--cell 1-->
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lobortis interdum metus at rhoncus. Donec imperdiet, purus in laoreet porta, lacus orci commodo lectus, nec commodo nisl purus eget urna. Morbi nec sapien ligula. Duis ut accumsan leo. Nam at sodales sapien. Cras eget porta tortor, at tempor turpis. Integer eros nunc, feugiat sit amet massa quis, rutrum sagittis neque. Quisque feugiat justo vitae rutrum ultrices. Integer gravida dictum orci nec elementum. Quisque semper dapibus nulla, in aliquet quam maximus a. Duis ultricies nibh odio, nec aliquet ipsum consectetur ut. Integer hendrerit lorem non malesuada luctus. Donec cursus molestie ligula, id fringilla lacus iaculis non. Fusce quis dignissim orci. Nulla nulla dolor, semper sit amet bibendum sed, vehicula at mauris.
