updated grid/page layout, updated navbar and background colour

--- a/index.html
+++ b/index.html
@@ -9,25 +9,41 @@
 <body>
 
 <!-- Nav bar -->
-<a href="index.html">Home Page</a>
-<a href="profile.html">Profile Page</a>
+<div class="navbar">
+    <a href="index.html">Home Page</a>
+    <a href="profile.html">Profile Page</a>
+</div>
 
 <div class="grid-container"> <!--Overall layout-->
     <div class="full-width">
         <h1>Welcome to Ngunnawal Country</h1>
     </div>
-    <div> <!--cell 1-->
+    <div> <!--column 1-->
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lobortis interdum metus at rhoncus. Donec imperdiet, purus in laoreet porta, lacus orci commodo lectus, nec commodo nisl purus eget urna. Morbi nec sapien ligula. Duis ut accumsan leo. Nam at sodales sapien. Cras eget porta tortor, at tempor turpis. Integer eros nunc, feugiat sit amet massa quis, rutrum sagittis neque. Quisque feugiat justo vitae rutrum ultrices. Integer gravida dictum orci nec elementum. Quisque semper dapibus nulla, in aliquet quam maximus a. Duis ultricies nibh odio, nec aliquet ipsum consectetur ut. Integer hendrerit lorem non malesuada luctus. Donec cursus molestie ligula, id fringilla lacus iaculis non. Fusce quis dignissim orci. Nulla nulla dolor, semper sit amet bibendum sed, vehicula at mauris.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lobortis interdum metus at rhoncus. Donec
+            imperdiet, purus in laoreet porta, lacus orci commodo lectus, nec commodo nisl purus eget urna. Morbi nec
+            sapien ligula. Duis ut accumsan leo. Nam at sodales sapien. Cras eget porta tortor, at tempor turpis.
+            Integer eros nunc, feugiat sit amet massa quis, rutrum sagittis neque. Quisque feugiat justo vitae rutrum
+            ultrices. Integer gravida dictum orci nec elementum. Quisque semper dapibus nulla, in aliquet quam maximus
+            a. Duis ultricies nibh odio, nec aliquet ipsum consectetur ut. Integer hendrerit lorem non malesuada luctus.
+            Donec cursus molestie ligula, id fringilla lacus iaculis non. Fusce quis dignissim orci. Nulla nulla dolor,
+            semper sit amet bibendum sed, vehicula at mauris.
         </p>
     </div>
-    <div> <!--cell 2-->
-        <img src="images/ngunnawal_sunset.jpg" alt="Ngunnawal Sunset" style="width: 500px">
-    </div>
-    <div> <!--cell 3-->
-        <p>
-            Nam ultricies posuere consectetur. Mauris purus eros, bibendum condimentum dolor non, venenatis viverra lectus. Maecenas nec luctus tortor, vel pellentesque nibh. Duis gravida iaculis posuere. Cras gravida elit et sapien fringilla lobortis eget a orci. Donec efficitur lorem at nibh bibendum tincidunt. Nullam porta, erat luctus mollis hendrerit, elit magna porttitor erat, et tincidunt odio turpis sed dui. Sed massa urna, tincidunt et sagittis tempus, aliquam eget enim. Pellentesque augue purus, ullamcorper ac purus a, dapibus accumsan purus.
-        </p>
+    <div> <!--column 2-->
+        <div> <!--cell 2-->
+            <img src="images/ngunnawal_sunset.jpg" alt="Ngunnawal Sunset" style="width: 500px">
+        </div>
+        <div> <!--cell 3-->
+            <p>
+                Nam ultricies posuere consectetur. Mauris purus eros, bibendum condimentum dolor non, venenatis viverra
+                lectus. Maecenas nec luctus tortor, vel pellentesque nibh. Duis gravida iaculis posuere. Cras gravida
+                elit et sapien fringilla lobortis eget a orci. Donec efficitur lorem at nibh bibendum tincidunt. Nullam
+                porta, erat luctus mollis hendrerit, elit magna porttitor erat, et tincidunt odio turpis sed dui. Sed
+                massa urna, tincidunt et sagittis tempus, aliquam eget enim. Pellentesque augue purus, ullamcorper ac
+                purus a, dapibus accumsan purus.
+            </p>
+        </div>
     </div>
 </div>
 
