--- a/profile.html
+++ b/profile.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+
+    <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
 
 <!-- Nav bar -->
-<a href="index.html">Home Page</a>
-<a href="profile.html">Profile Page</a>
+<div class="navbar">
+    <a href="index.html">Home Page</a>
+    <a href="profile.html">Profile Page</a>
+</div>
 
 <h1>Welcome to Ngunnawal Country</h1>
 
