--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="banner">
-    <img src="images/banner_cropped.png" alt="banner">
+    <img src="images/banner_cropped.png" alt="website banner">
 </div>
 
 <div class="grid-container"> <!--Overall layout-->
