added search bar & button; added footer

--- a/history.html
+++ b/history.html
@@ -11,7 +11,7 @@
 <!-- Nav bar -->
 <div class="navbar">
     <a href="index.html">Home Page</a>
-    <a href="profile.html">Profile Page</a>
+    <a href="history.html">Profile Page</a>
 </div>
 
 <h1>Welcome to Ngunnawal Country</h1>
