--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <div class="navbar">
     <img src="images/logo.png" alt="logo" width="60" height="60">
     <a href="index.html">Home Page</a>
-    <a href="profile.html">Profile Page</a>
+    <a href="history.html">Ngunnawal History</a>
+    <a href="history.html">Photo Album</a>
+    <a href="history.html">Contact Us</a>
+    <div class="search-container">
+        <form action="index.html">
+            <button type="submit"><img src="images/search.png" width="20" height="20"></button>
+            <input type="text" placeholder="Search...">
+        </form>
+    </div>
 </div>
 
 <div class="banner">
@@ -42,11 +50,18 @@
         <p>
             Cell4
         </p>
-    </div><div class="full-width">
+    </div>
+    <div class="full-width">
         <p>
-            Img2
+            Img2 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>scroll testing
         </p>
     </div>
+</div>
+
+<div class="footer">
+    <p>
+        footer
+    </p>
 </div>
 
 </body>
