fixed navbar not stretching to full page width

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="banner">
-    <img src="images/banner_cropped.png" alt="website banner">
+    <img src="images/banner.png" alt="website banner">
 </div>
 
 <div class="grid-container"> <!--Overall layout-->
