commented & cleaned code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
-
     <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
@@ -15,6 +14,7 @@
     <a href="history.html">Ngunnawal History</a>
     <a href="history.html">Photo Album</a>
     <a href="history.html">Contact Us</a>
+    <!-- Search Box -->
     <div class="search-container">
         <form action="index.html">
             <button type="submit"><img src="images/search.png" width="20" height="20"></button>
@@ -23,10 +23,12 @@
     </div>
 </div>
 
+<!-- Banner -->
 <div class="banner">
     <img src="images/banner.png" alt="website banner">
 </div>
 
+<!-- Page Content -->
 <div class="grid-container"> <!--Overall layout-->
     <div class="full-width">
         <h1>Home Page</h1>
@@ -58,11 +60,11 @@
     </div>
 </div>
 
+<!-- Footer -->
 <div class="footer">
     <p>
         footer
     </p>
 </div>
-
 </body>
 </html>
