added all required pages & laid them out correctly

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ngunnawal History</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
@@ -31,36 +31,16 @@
 <!-- Page Content -->
 <div class="grid-container">
     <div class="full-width">
-        <h1>Ngunnawal History</h1>
+        <h1>Contact Us</h1>
     </div>
     <div class="full-width"> <!--cell 1-->
         <p>
             Cell1
         </p>
     </div>
-    <div>
+    <div class="full-width">
         <p> <!--cell 2-->
             Img1
-        </p>
-    </div>
-    <div>
-        <p> <!--cell 3-->
-            Cell2
-        </p>
-    </div>
-    <div>
-        <p>
-            Cell3
-        </p>
-    </div>
-    <div>
-        <p>
-            Img2
-        </p>
-    </div>
-    <div class="full-width">
-        <p>
-            Cell4
         </p>
     </div>
 </div>
