--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <img src="images/logo.png" alt="logo" width="60" height="60">
     <a href="index.html">Home Page</a>
     <a href="history.html">Ngunnawal History</a>
-    <a href="history.html">Photo Album</a>
-    <a href="history.html">Contact Us</a>
+    <a href="photo.html">Photo Album</a>
+    <a href="contact.html">Contact Us</a>
     <!-- Search Box -->
     <div class="search-container">
         <form action="index.html">
@@ -29,7 +29,7 @@
 </div>
 
 <!-- Page Content -->
-<div class="grid-container"> <!--Overall layout-->
+<div class="grid-container">
     <div class="full-width">
         <h1>Home Page</h1>
     </div>
