--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ngunnawal History</title>
+    <title>Photo Album</title>
     <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
@@ -31,11 +31,11 @@
 <!-- Page Content -->
 <div class="grid-container">
     <div class="full-width">
-        <h1>Ngunnawal History</h1>
+        <h1>Photo Album</h1>
     </div>
     <div class="full-width"> <!--cell 1-->
         <p>
-            Cell1
+            Image Carousel
         </p>
     </div>
     <div>
@@ -45,7 +45,27 @@
     </div>
     <div>
         <p> <!--cell 3-->
+            Img2
+        </p>
+    </div>
+    <div>
+        <p>
+            Cell1
+        </p>
+    </div>
+    <div>
+        <p>
             Cell2
+        </p>
+    </div>
+    <div>
+        <p>
+            Img3
+        </p>
+    </div>
+    <div>
+        <p>
+            Img4
         </p>
     </div>
     <div>
@@ -54,11 +74,6 @@
         </p>
     </div>
     <div>
-        <p>
-            Img2
-        </p>
-    </div>
-    <div class="full-width">
         <p>
             Cell4
         </p>
