fixed image carousel front of nav bar; added licenced images

--- a/photo.html
+++ b/photo.html
@@ -40,17 +40,17 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="images/country/img1.jpg" style="width:100%">
+                <img src="images/country/img.png" style="width:100%">
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="images/country/img2.jfif" style="width:100%">
+                <img src="images/country/img1.png" style="width:100%">
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="images/country/img3.jpg" style="width:100%">
+                <img src="images/country/img2.png" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
@@ -68,12 +68,12 @@
     </div>
     <div>
         <p> <!--cell 2-->
-            Img1
+            <img src="images/country/img3.png" width="100%">
         </p>
     </div>
     <div>
         <p> <!--cell 3-->
-            Img2
+            <img src="images/country/img5.png" width= "93%">
         </p>
     </div>
     <div>
@@ -88,12 +88,12 @@
     </div>
     <div>
         <p>
-            Img3
+            <img src="images/country/img4.png" width="100%">
         </p>
     </div>
     <div>
         <p>
-            Img4
+            <img src="images/country/img7.png" width="91%">
         </p>
     </div>
     <div>
