--- a/photo.html
+++ b/photo.html
@@ -73,7 +73,7 @@
     </div>
     <div>
         <p> <!--cell 3-->
-            <img src="images/country/img5.png" width= "93%">
+            <img class="centre-img" src="images/country/img5.png" width= "93%">
         </p>
     </div>
     <div>
@@ -93,7 +93,7 @@
     </div>
     <div>
         <p>
-            <img src="images/country/img7.png" width="91%">
+            <img class="centre-img" src="images/country/img7.png" width="91%">
         </p>
     </div>
     <div>
