added images and lorem ipsum to all pages

--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,33 @@
     </div>
     <div class="full-width"> <!--cell 1-->
         <p>
-            Cell1
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lacinia pellentesque felis nec rhoncus.
+            Etiam accumsan ipsum ac consectetur ornare. Sed consequat lacus ut tellus vehicula lobortis. Donec porta
+            nisi enim, vitae lobortis dolor tristique sed. Quisque vel fermentum magna. Fusce ut purus pellentesque,
+            eleifend tortor vitae, volutpat nulla.
+        </p>
+        <p>
+            Proin elementum iaculis metus, ac rhoncus metus sollicitudin sit
+            amet. Nunc sagittis quam neque, eget bibendum est tincidunt nec. Sed dictum lorem vitae efficitur egestas.
+            Aenean maximus nisi odio, et tincidunt turpis scelerisque eget. Quisque in tortor felis. Sed vitae purus
+            nunc.
+        </p><br>
+        <p>
+        <h3>Contact Details:</h3>
+        </p><br>
+        <p>
+            Email: realemailaddress@gmail.com
+        </p><br>
+        <p>
+            Phone: 3902 4780 223
+        </p><br>
+        <p>
+            Address: Australia, Earth, Milky Way
         </p>
     </div>
     <div class="full-width">
         <p> <!--cell 2-->
-            Img1
+            <img src="images/country/img2.png" width="100%">
         </p>
     </div>
 </div>
