added form to contact us page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <a href="contact.html">Contact Us</a>
     <!-- Search Box -->
     <div class="search-container">
-        <form action="index.html">
+        <form action="contact.html">
             <button type="submit"><img src="images/search.png" width="20" height="20"></button>
             <input type="text" placeholder="Search...">
         </form>
@@ -35,28 +35,24 @@
     </div>
     <div class="full-width"> <!--cell 1-->
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lacinia pellentesque felis nec rhoncus.
-            Etiam accumsan ipsum ac consectetur ornare. Sed consequat lacus ut tellus vehicula lobortis. Donec porta
-            nisi enim, vitae lobortis dolor tristique sed. Quisque vel fermentum magna. Fusce ut purus pellentesque,
-            eleifend tortor vitae, volutpat nulla.
-        </p>
-        <p>
-            Proin elementum iaculis metus, ac rhoncus metus sollicitudin sit
-            amet. Nunc sagittis quam neque, eget bibendum est tincidunt nec. Sed dictum lorem vitae efficitur egestas.
-            Aenean maximus nisi odio, et tincidunt turpis scelerisque eget. Quisque in tortor felis. Sed vitae purus
-            nunc.
-        </p><br>
-        <p>
-        <h3>Contact Details:</h3>
-        </p><br>
-        <p>
-            Email: realemailaddress@gmail.com
-        </p><br>
-        <p>
-            Phone: 3902 4780 223
-        </p><br>
-        <p>
-            Address: Australia, Earth, Milky Way
+        <form>
+            <style>
+                form {
+                    float: left;
+                    border: none;
+                    font-size: 16px;
+                }
+            </style>
+            <h2 style="color:#2a382b">Please Enter Your Details:</h2>
+            <br>
+            Name: <input>
+            <br><br>
+            Email: <input>
+            <br><br>
+            Address: <input>
+            <br><br>
+            Phone Number: <input>
+        </form>
         </p>
     </div>
     <div class="full-width">
@@ -69,7 +65,7 @@
 <!-- Footer -->
 <div class="footer">
     <p>
-        footer
+        Page Footer
     </p>
 </div>
 </body>
