--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
     <a href="contact.html">Contact Us</a>
     <!-- Search Box -->
     <div class="search-container">
-        <form action="index.html">
+        <form action="history.html">
             <button type="submit"><img src="images/search.png" width="20" height="20"></button>
             <input type="text" placeholder="Search...">
         </form>
@@ -105,7 +105,7 @@
 <!-- Footer -->
 <div class="footer">
     <p>
-        footer
+        Page Footer
     </p>
 </div>
 </body>
