--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
     <a href="contact.html">Contact Us</a>
     <!-- Search Box -->
     <div class="search-container">
-        <form action="index.html">
+        <form action="photo.html">
             <button type="submit"><img src="images/search.png" width="20" height="20"></button>
             <input type="text" placeholder="Search...">
         </form>
@@ -35,6 +35,7 @@
     </div>
     <div class="full-width"> <!--cell 1-->
         <!-- Slideshow container -->
+        <!--Slideshow code from W3 Schools https://www.w3schools.com/howto/howto_js_slideshow.asp-->
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
@@ -116,10 +117,12 @@
 <!-- Footer -->
 <div class="footer">
     <p>
-        footer
+        Page Footer
     </p>
 </div>
 
+<!--javascript for image carousel-->
+<!--Code from W3 Schools https://www.w3schools.com/howto/howto_js_slideshow.asp-->
 <script>
     let slideIndex = 1;
     showSlides(slideIndex);
